cros: Fix black shadow issue for login shelf buttons

Verified it works on a Paine. This is a regression caused by
https://chromium-review.googlesource.com/c/chromium/src/+/1138861

Bug: 873609
Change-Id: I929fb3be9f0f811d901811aebf34c8c52ea42bf2
Reviewed-on: https://chromium-review.googlesource.com/1175192
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583072}
Former-commit-id: 02c0da02c0e986e9c6e2eed2ac79516ac96d8f9a